[package]
name = "teleport-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.5.0-rc.1",features = ["json"]}
serde = { version = "1", features = ["derive"] }
dotenv = "0.9.0"
diesel = "1.4.8"
sodalite = "0.4.0"
anchor-lang = "0.18.0"
sha2 = "0.9.8"
tweetnacl = "0.4.0"
tweetnacl-sys = "0.1.5"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]